--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css" />
     <link rel="stylesheet" href="css/owl.theme.default.min.css" />
     <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
-    <link rel="stylesheet" href="fonts/icomoon/style.css" />
+    <link rel="stylesheet" href="css/style.css?v=20250830">
+
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css" />
     <link rel="stylesheet" href="css/daterangepicker.css" />
     <link rel="stylesheet" href="css/aos.css" />
@@ -47,7 +48,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
-
+    
     <title>SkinFix</title>
   </head>
 
